# violence-detection

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  start-dev.js
.kiro/specs/ai-violence-detection/: design.md  requirements.md  tasks.md
ai-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
ai-service/app/: __init__.py
ai-service/app/api/routes/: analysis.py  health.py
ai-service/app/core/: config.py  exceptions.py  logging.py
ai-service/app/services/: model_service.py  video_service.py
backend/: Dockerfile  nodemon.json  package.json  tsconfig-paths.js  tsconfig.json
backend/src/: index.ts
backend/src/config/: database.ts  redis.ts
backend/src/controllers/: AnalysisController.ts  VideoController.ts
backend/src/middleware/: errorHandler.ts  upload.ts  validation.ts
backend/src/migrations/: 001-create-tables.sql
backend/src/routes/: analysis.ts  health.ts  videos.ts
backend/src/scripts/: setupDirectories.ts
backend/src/services/: CacheService.ts  QueueService.ts  SessionService.ts  StorageService.ts
backend/src/test/: setup.ts
backend/src/utils/: fileSystem.ts  validateEnv.ts
database/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  VideoUpload.tsx
frontend/src/pages/: AnalysisPage.tsx  HistoryPage.tsx  HomePage.tsx  NotFoundPage.tsx  ResultsPage.tsx  UploadPage.tsx
nginx/: nginx.conf
(+2 files in other folders)
